tests/invalid-syntax/58219_invalid_return_type/invalid_return_type.agu
-- Author: 58219, Mariana Costa
-- Semantic error: return type should be int

let _ (n) : Int -> Bool = n + 5